gr-sys/bindings/gks.rs

extern "C" {
    pub fn ginqlevelgks(arg1: *mut Gint, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqmaxntrannum(arg1: *mut Gint, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqcharheight(arg1: *mut Gfloat, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqcharup(arg1: *mut Gpoint, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqtextpath(arg1: *mut Gtxpath, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqtextalign(arg1: *mut Gtxalign, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqlinetype(arg1: *mut Gint, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqlinewidth(arg1: *mut Gfloat, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqlinecolourind(arg1: *mut Gint, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqmarkertype(arg1: *mut Gint, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqmarkersize(arg1: *mut Gfloat, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqmarkercolourind(arg1: *mut Gint, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqtextfontprec(arg1: *mut Gtxfp, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqcharexpan(arg1: *mut Gfloat, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqcharspace(arg1: *mut Gfloat, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqtextcolourind(arg1: *mut Gint, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqfillintstyle(arg1: *mut Gint, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqfillstyle(arg1: *mut Gint, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqfillcolourind(arg1: *mut Gint, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqcurntrannum(arg1: *mut Gint, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqntran(arg1: Gint, arg2: *mut Gtran, arg3: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqclip(arg1: *mut Gcliprect, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqwscategory(
        arg1: *mut Gwstype,
        arg2: *mut Gint,
        arg3: *mut Gint,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqdisplaysize(
        arg1: *mut Gwstype,
        arg2: *mut Gdspsize,
        arg3: *mut Gint,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqtextextent(
        arg1: Gint,
        arg2: *mut Gpoint,
        arg3: *mut Gchar,
        arg4: *mut Gextent,
        arg5: *mut Gint,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqnameopenseg(arg1: *mut Gint, arg2: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gemergencyclosegks() -> ::core::ffi::c_int;
}
